syntax = "proto3";

option csharp_namespace = "Session";

package GrpcGreeter;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}
message HelloRequest {
  string name = 1;
}
message HelloReply {
  string message = 1;
}